[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.1.6", features = ["behavior-version-latest"] }
aws-sdk-athena = "1.15.0"
tokio = { version = "1", features = ["full"] }
